--- a/css/base/_root.scss
+++ b/css/base/_root.scss
@@ -22,6 +22,10 @@
   --white-01: rgba(255, 255, 255, 0.1);
   --white-005: rgba(255, 255, 255, 0.05);
   --black: #000;
+
+  --modal-bg: #080808c4;
+  --modal-icon: #fff;
+  --modal-accent: ;
 }
 
 // :root {
