--- a/css/blocks/_logo.scss
+++ b/css/blocks/_logo.scss
@@ -31,4 +31,22 @@
     line-height: 136%;
     color: rgba(245, 245, 245, 0.55);
   }
+
+  @media (max-width: 767px) {
+    max-width: 100%;
+    display: grid;
+    gap: 16px;
+    grid-template-columns: 95px 1fr;
+    .logo__link {
+      max-width: 100%;
+    }
+    .logo__link::after {
+      right: -9px;
+      top: 25%;
+      height: 50%;
+    }
+    .logo__label {
+      font-size: 9px;
+    }
+  }
 }
