--- a/css/sections/_call-to-action.scss
+++ b/css/sections/_call-to-action.scss
@@ -3,13 +3,54 @@
   border-radius: 20px;
   background-color: #fff;
   color: rgba(69, 71, 71, 0.8);
+  background-image: url(../img/call-to-action/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 130px;
+  padding-bottom: 100px;
+  margin-bottom: 20px;
 
   .title {
-    font-family: var(--second-family);
-    font-weight: 400;
-    font-size: 50px;
+    // font-family: var(--second-family);
+    // font-weight: 400;
+    // font-size: 50px;
     color: #454747;
-    margin: 0;
+    // margin: 0;
     margin-bottom: 25px;
+  }
+  .section-label {
+    backdrop-filter: blur(51px);
+    color: rgb(48 48 48);
+    border: 1px solid rgb(48 48 48);
+  }
+  .section__header-col {
+    grid-column: 6/13;
+  }
+
+  .form {
+    margin-top: 50px;
+    padding: 40px;
+    border-radius: 25px;
+    backdrop-filter: blur(55px);
+    background: rgba(255, 255, 255, 0.15);
+    border: 1px solid #fff;
+  }
+
+  @media (max-width: 1279px) {
+    padding-top: 500px;
+  }
+
+  @media (max-width: 767px) {
+    padding-top: 50px;
+    padding-bottom: 32px;
+
+    .form {
+      margin-top: 28px;
+      padding: 20px;
+    }
+    .form__info {
+      font-size: 13px;
+      color: #ffffff;
+    }
   }
 }
