--- a/css/sections/_modal.scss
+++ b/css/sections/_modal.scss
@@ -15,34 +15,43 @@
   opacity: 0;
   pointer-events: none;
   background-color: var(--modal-bg);
-  color: var(--balck);
+  color: var(--black);
 
   &__body {
     position: relative;
-    width: 835px !important;
+    width: 500px !important;
     margin: 0 auto;
+    padding: 32px 40px 45px;
+    background: var(--black);
+    border-radius: 25px;
+    background-image: url(../img/modal/bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     overflow: hidden;
-    padding: 32px 48px 48px;
-    background: var(--white);
-    border-radius: 20px;
   }
   &__title {
-    font-size: 32px;
-    margin-bottom: 8px;
-    &::before {
-      top: 19px;
-      height: 4px;
-    }
-  }
-  &__text {
     margin: 0;
-    font-weight: 500;
-    margin-bottom: 24px;
-    font-size: 16px;
-    line-height: 156%;
+    font-family: var(--second-family);
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 120%;
+    color: #fff2f4;
+    margin-bottom: 20px;
+    max-width: 280px;
+    // &::before {
+    //   top: 19px;
+    //   height: 4px;
+    // }
   }
-  &__input {
-  }
+  // &__text {
+  //   margin: 0;
+  //   font-weight: 500;
+  //   margin-bottom: 24px;
+  //   font-size: 16px;
+  //   line-height: 156%;
+  // }
+  // &__input {
+  // }
 
   &__close {
     position: absolute;
@@ -68,14 +77,42 @@
     &:hover,
     &:active,
     &:focus {
-      color: var(--green);
+      color: var(--modal-accent);
     }
+  }
+
+  .form__info {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 115%;
+    text-align: center;
+    color: rgba(245, 245, 245, 0.45);
+
+
+  }
+  .form__info a {
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: rgba(254, 229, 188, 0.65);
   }
 
   &.active {
     pointer-events: initial;
     visibility: visible;
     opacity: 1;
+  }
+
+  .form__grid {
+    display: block;
+  }
+  .form__item {
+    margin-bottom: 10px;
+  }
+  .form input {
+    backdrop-filter: blur(55px);
+    background: rgba(0, 0, 0, 0.25);
+    border: 1px solid var(--white-01);
   }
 
   @media (max-width: 950px) {
