--- a/css/blocks/_form.scss
+++ b/css/blocks/_form.scss
@@ -1,127 +1,215 @@
 .form {
   &__grid {
     display: grid;
-    gap: 32px;
+    gap: 10px;
     grid-template-columns: repeat(2, 1fr);
-
-    &--three {
-      grid-template-columns: repeat(3, 1fr);
-    }
+    margin-bottom: 10px;
   }
-  &__input {
-    input {
-      border: 1px solid var(--line);
-      outline: none;
-      border-radius: 20px;
-      padding: 0px 16px;
-      width: 100%;
-      height: 56px;
-      font-size: 16px;
-      &:hover,
-      &:active,
-      &:focus {
-        border: 1px solid var(--green);
-      }
-    }
-
-    label {
-      font-weight: 400;
-      font-size: 15px;
-      display: inline-block;
-      margin-bottom: 13px;
-    }
-  }
-
-  &__agree {
-    grid-column: span 2;
-    font-weight: 400;
-    font-size: 15px;
-    align-self: center;
+  &__item {
+    position: relative;
     display: flex;
     align-items: center;
-
-    a {
-      color: var(--green);
-
-      &:hover,
-      &:active,
-      &:focus {
-        text-decoration: underline;
-      }
+    &::before {
+      content: "";
+      display: block;
+      width: 15px;
+      height: 15px;
+      background-image: url(../img/icon-user.svg);
+      background-repeat: no-repeat;
+      background-size: contain;
+      position: absolute;
+      left: 30px;
+      z-index: 1;
+      pointer-events: none;
+      opacity: 0.4;
     }
-
-    label {
-      position: relative;
-      padding-left: calc(15px + 32px);
-      // margin-bottom: 0;
-      &::after {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 5px;
-        left: 9px;
-        width: 16px;
-        height: 16px;
-        opacity: 0;
-        transition: opacity 0.3s;
-        background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='16' height='15' viewBox='0 0 16 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M1 7L6.75758 13L15 1' stroke='white' stroke-width='2' stroke-linecap='round'/%3e%3c/svg%3e ");
-        background-repeat: no-repeat;
-        background-size: contain;
-      }
-
-      &::before {
-        content: "";
-        display: block;
-        position: absolute;
-        top: -5px;
-        left: 0;
-        transition: all 0.3s;
-        background: var(--white);
-        border: 1px solid var(--line);
-        border-radius: 12px;
-        width: 32px;
-        height: 32px;
-      }
+    &--mod {
+      grid-column: span 2;
     }
-    input:checked + label::before {
-      background: var(--green);
-      border: 1px solid var(--green);
+  }
+  &__item--phone {
+    &::before {
+      background-image: url(../img/icon-call.svg);
+      opacity: 0.4;
     }
-    input:checked + label::after {
-      opacity: 1;
+  }
+  &__item--email {
+    &::before {
+      background-image: url(../img/icon-message.svg);
     }
   }
 
-  &__submit {
-  }
-  &__button {
+  input {
+    height: 80px;
+    border: 1px solid #fff;
+    border-radius: 15px;
+    backdrop-filter: blur(55px);
+    background: rgba(255, 255, 255, 0.55);
+
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 129%;
+    color: rgba(69, 71, 71, 0.35);
+    display: block;
+    padding: 20px 25px;
+    padding-left: 60px;
     max-width: 100%;
     width: 100%;
+    &::placeholder {
+      font-family: var(--font-family);
+      font-weight: 400;
+      font-size: 17px;
+      line-height: 129%;
+      color: rgba(69, 71, 71, 0.35);
+    }
   }
-  @media (max-width: 767px) {
+  &__button-submit {
+    max-width: 100%;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  &__info {
+    margin: 0;
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 147%;
+    text-align: center;
+    color: rgba(69, 71, 71, 0.45);
+
+    a {
+      text-decoration: underline;
+      text-decoration-skip-ink: none;
+      color: #1b59b7;
+    }
+  }
+
+  @media (max-width: 1279px) {
     &__grid {
-      gap: 12px;
-    }
-    &__grid--three {
+      display: grid;
+      gap: 10px;
       grid-template-columns: repeat(1, 1fr);
+      margin-bottom: 10px;
     }
-    &__agree {
+    &__item {
       grid-column: initial;
     }
-    &__input {
-      input {
-        height: 50px;
+    input {
+      height: 60px;
+      padding: 11px 20px;
+      padding-left: 40px;
+      font-size: 14px;
+      ::placeholder {
+        font-size: inherit;
       }
     }
-    &__agree {
-      padding-top: calc(25px - 12px);
-      padding-bottom: calc(25px - 12px);
-      a {
-        color: var(--violet);
-      }
-    }
-    .button {
-      height: 50px;
+    &__item::before {
+      left: 15px;
     }
   }
 }
+
+// .form {
+//   &__grid {
+//     display: grid;
+//     gap: 32px;
+//     grid-template-columns: repeat(2, 1fr);
+
+//     &--three {
+//       grid-template-columns: repeat(3, 1fr);
+//     }
+//   }
+
+//   &__input {
+//     input {
+//       border: 1px solid var(--line);
+//       outline: none;
+//       border-radius: 20px;
+//       padding: 0px 16px;
+//       width: 100%;
+//       height: 56px;
+//       font-size: 16px;
+//       &:hover,
+//       &:active,
+//       &:focus {
+//         border: 1px solid var(--green);
+//       }
+//     }
+
+//     label {
+//       font-weight: 400;
+//       font-size: 15px;
+//       display: inline-block;
+//       margin-bottom: 13px;
+//     }
+//   }
+
+//   &__agree {
+//     grid-column: span 2;
+//     font-weight: 400;
+//     font-size: 15px;
+//     align-self: center;
+//     display: flex;
+//     align-items: center;
+
+//     a {
+//       color: var(--green);
+
+//       &:hover,
+//       &:active,
+//       &:focus {
+//         text-decoration: underline;
+//       }
+//     }
+
+//     label {
+//       position: relative;
+//       padding-left: calc(15px + 32px);
+//       // margin-bottom: 0;
+//       &::after {
+//         content: "";
+//         display: block;
+//         position: absolute;
+//         top: 5px;
+//         left: 9px;
+//         width: 16px;
+//         height: 16px;
+//         opacity: 0;
+//         transition: opacity 0.3s;
+//         background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='16' height='15' viewBox='0 0 16 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M1 7L6.75758 13L15 1' stroke='white' stroke-width='2' stroke-linecap='round'/%3e%3c/svg%3e ");
+//         background-repeat: no-repeat;
+//         background-size: contain;
+//       }
+
+//       &::before {
+//         content: "";
+//         display: block;
+//         position: absolute;
+//         top: -5px;
+//         left: 0;
+//         transition: all 0.3s;
+//         background: var(--white);
+//         border: 1px solid var(--line);
+//         border-radius: 12px;
+//         width: 32px;
+//         height: 32px;
+//       }
+//     }
+//     input:checked + label::before {
+//       background: var(--green);
+//       border: 1px solid var(--green);
+//     }
+//     input:checked + label::after {
+//       opacity: 1;
+//     }
+//   }
+
+//   &__submit {
+//   }
+//   &__button {
+//     max-width: 100%;
+//     width: 100%;
+//   }
+//
+// }
