--- a/css/blocks/_wrapper.scss
+++ b/css/blocks/_wrapper.scss
@@ -4,4 +4,12 @@
   width: 100%;
   margin-inline: auto;
   padding-inline: 30px;
+
+  @media (max-width: 1279px) {
+    max-width: 100%;
+    padding-inline: 20px;
+  }
+
+  @media (max-width: 767px) {
+  }
 }
