--- a/css/sections/_reviews.scss
+++ b/css/sections/_reviews.scss
@@ -7,7 +7,6 @@
   color: rgba(69, 71, 71, 0.8);
   padding-top: 130px;
 
-
   .title {
     font-family: var(--second-family);
     font-weight: 400;
@@ -33,8 +32,9 @@
       height: 315px;
       background-image: url(../img/reviews/bg.png);
       background-repeat: no-repeat;
-      background-size: contain;
+      background-size: cover;
       z-index: 0;
+      border-radius: 25px;
     }
   }
   &__col-left {
@@ -48,7 +48,6 @@
     display: grid;
     gap: 16px;
     grid-template-columns: repeat(3, 1fr);
-
   }
 
   &__slider-text {
@@ -73,6 +72,11 @@
       padding: 15px 20px;
       height: 50px;
       line-height: 1;
+      transition: all 0.3s;
+      &:hover {
+        background: #6a0406c7;
+        color: #fff;
+      }
     }
 
     h3 {
@@ -93,6 +97,37 @@
     a {
       text-decoration: underline;
       text-decoration-skip-ink: none;
+    }
+  }
+
+  @media (max-width: 1279px) {
+    padding-top: 55px;
+    padding-bottom: 55px;
+    .reviews__grid::before {
+      left: 0;
+      right: 0;
+      bottom: -6px;
+      height: 210px;
+    }
+    .reviews__grid {
+      grid-template-columns: 350px auto;
+    }
+  }
+  @media (max-width: 767px) {
+    .reviews__grid {
+      display: block;
+    }
+    .reviews__grid::before {
+      left: -20px;
+      right: -20px;
+      bottom: -60px;
+      height: 175px;
+    }
+    .reviews__slider-text h3 {
+      font-size: 25px;
+    }
+    .reviews__slider-text {
+      font-size: 14px;
     }
   }
 }
