--- a/css/sections/_section.scss
+++ b/css/sections/_section.scss
@@ -7,6 +7,7 @@
     gap: 32px;
     grid-template-columns: repeat(12, 1fr);
     margin-bottom: 60px;
+    position: relative;
   }
   &__header-col {
     grid-column: 6/12;
@@ -17,6 +18,9 @@
     grid-template-columns: repeat(3, 1fr);
     width: 100%;
     max-width: max-content;
+    margin: 0;
+    padding: 0;
+    list-style: none;
     &--right {
       max-width: max-content;
       margin-left: auto;
@@ -40,5 +44,24 @@
     position: absolute;
     top: 0;
     left: 0;
+  }
+
+  @media (max-width: 1279px) {
+    .section__header {
+      margin-bottom: 38px;
+    }
+  }
+  @media (max-width: 767px) {
+    .section-label {
+      position: initial;
+      margin-bottom: 16px;
+    }
+    .section__header {
+      display: block;
+      margin-bottom: 20px;
+    }
+    &__card-group {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 }
