--- a/css/blocks/_button.scss
+++ b/css/blocks/_button.scss
@@ -34,9 +34,9 @@
   &:hover,
   &:active,
   &:focus {
-    // box-shadow: 0 3px 0 0 #8c2229;
     background: linear-gradient(90deg, #b71b25 0%, #c24a52 50%, #b71b25 100%);
     color: #fff;
+    box-shadow: none;
   }
 
   &--red {
@@ -83,18 +83,8 @@
   }
 
   @media (max-width: 767px) {
-    &--icon-solo {
-      width: 50px;
-      height: 50px;
-    }
-
-    &--large {
-      height: 50px;
-    }
-
-    &--read-more {
-      height: 50px;
-    }
+    height: 60px;
+    font-size: 16px;
 
     &--small {
       height: 45px;
