--- a/css/blocks/_section-label.scss
+++ b/css/blocks/_section-label.scss
@@ -18,4 +18,8 @@
     border: #6a0406c7 !important;
     backdrop-filter: none !important;
   }
+
+  @media (max-width: 767px) {
+    display: none;
+  }
 }
