--- a/css/sections/_hero.scss
+++ b/css/sections/_hero.scss
@@ -8,6 +8,7 @@
   padding-top: 180px;
   padding-bottom: 135px;
   background-position: right;
+
   &__content {
     max-width: 560px;
   }
@@ -45,5 +46,31 @@
   @media (max-width: 767px) {
     padding-top: 130px;
     background-position: center;
+    background-image: url(../img/hero/bg-mob.jpg);
+
+    .best-masters {
+      position: relative;
+    }
+
+    .best-masters__icon {
+      margin-left: 0;
+      position: absolute;
+      bottom: -20px;
+      left: 16px;
+    }
+
+    .hero__text {
+      font-weight: 400;
+      font-size: 15px;
+      line-height: 133%;
+      color: rgba(245, 245, 245, 0.55);
+
+      .heart.mobile-show {
+        display: inline-block !important;
+      }
+    }
+    .button {
+      max-width: 100%;
+    }
   }
 }
