--- a/css/sections/_reviews.scss
+++ b/css/sections/_reviews.scss
@@ -103,6 +103,10 @@
     }
   }
 
+  .reviews__support {
+    display: none;
+  }
+
   @media (max-width: 1279px) {
     padding-top: 55px;
     padding-bottom: 55px;
@@ -120,6 +124,7 @@
   }
 
   @media (max-width: 767px) {
+    padding-bottom: 46px;
     .reviews__grid {
       display: block;
     }
@@ -127,7 +132,7 @@
     .reviews__grid::before {
       left: -20px;
       right: -20px;
-      bottom: -60px;
+      bottom: -22px;
       height: 175px;
     }
 
@@ -147,16 +152,20 @@
       margin-bottom: 20px;
     }
     .reviews__slider-min {
-      margin-bottom: 10px;
+      margin-bottom: 15px;
     }
 
-    &__support {
+    .reviews__support {
+      max-width: 225px;
       margin: 0;
       font-family: var(--font-family);
       font-weight: 400;
       font-size: 12px;
       line-height: 125%;
       color: #fff2f4;
+      display: grid;
+      gap: 12px;
+      grid-template-columns: auto 1fr;
     }
   }
 }
