--- a/css/sections/_mobile-nav.scss
+++ b/css/sections/_mobile-nav.scss
@@ -13,11 +13,16 @@
   background-image: url(../img/mobile-nav/bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  overflow: hidden;
+  overflow: auto;
 
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
+  .wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
   &__list {
     margin-bottom: 32px;
     position: relative;
