--- a/css/sections/_modal.scss
+++ b/css/sections/_modal.scss
@@ -38,20 +38,8 @@
     color: #fff2f4;
     margin-bottom: 20px;
     max-width: 280px;
-    // &::before {
-    //   top: 19px;
-    //   height: 4px;
-    // }
+
   }
-  // &__text {
-  //   margin: 0;
-  //   font-weight: 500;
-  //   margin-bottom: 24px;
-  //   font-size: 16px;
-  //   line-height: 156%;
-  // }
-  // &__input {
-  // }
 
   &__close {
     position: absolute;
@@ -113,6 +101,7 @@
     backdrop-filter: blur(55px);
     background: rgba(0, 0, 0, 0.25);
     border: 1px solid var(--white-01);
+    color: #ffffff;
   }
 
   @media (max-width: 950px) {
@@ -125,18 +114,18 @@
 
   @media (max-width: 767px) {
     &__body {
-      padding: 17px 20px 30px;
+      padding: 40px 20px;
     }
     &__title {
-      font-size: 28px;
+      font-size: 22px !important;
       line-height: 125%;
       &::before {
         width: 270px;
       }
     }
     &__close {
-      top: 0;
-      right: 0;
+      top: 6px;
+      right: 6px;
 
       svg {
         scale: 0.8;
